feat(IL-2206) - add x-api-key security
